src/main.css
body {
  background-color: black;
  color: #FFFFFF;

}

.root{
  display: grid;
  grid-template-rows: 80px auto 110px;
}

h1, h2 {
  color: #ff3333;
  text-shadow: 2px 2px #000;
}

nav, footer {
  background-color: #1a1a1a;
  padding: 10px;
  margin-top: 20px;
  border-top: 2px solid #ff3333;
  border-bottom: 2px solid #ff3333;
}

nav a, footer a {
  color: #e0e0e0;
  margin: 0 10px;
  text-decoration: none;
}

nav a:hover, footer a:hover {
  color: #ff3333;
}

form {
  margin-top: 20px;
}

input, select, textarea, button {
  display: block;
  margin: 10px 0;
  padding: 8px;
  background-color: #262626;
  color: #fff;
  border: 1px solid #ff3333;
}

button:hover {
  background-color: #ff3333;
  cursor: pointer;
}

